Fixed wires overlapping right click menu
difficult because components & right click menus were considered the "same" container

--- a/Shared/Components/VaryingComponent.razor.css
+++ b/Shared/Components/VaryingComponent.razor.css
@@ -119,12 +119,12 @@
 }
 
 .right-click-container {
-    z-index: 99999999999999999999;
+    z-index: 1000;
     display: flex;
     flex-direction: column;
     background-color: lightgray;
     border-radius: 1rem 1rem 1rem 1rem;
-    position: absolute;
+    position: fixed;
     max-width: fit-content;
     justify-content: left;
     margin-left: 5px;
@@ -134,6 +134,7 @@
     border-color: gray;
     border-style: solid;
     text-align: left;
+    pointer-events: auto;
 }
 
 .right-click-container button {
